# HDL-FSM-Editor

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  OptionMenu.py  README.md  canvas_editing.py  compile_handling.py  condition_action_handling.py  constants.py  custom_text.py  file_handling.py  global_actions.py  global_actions_combinatorial.py  hdl_fsm_editor.py  hdl_generation.py  hdl_generation_architecture.py  hdl_generation_architecture_state_actions.py  hdl_generation_library.py  main_window.py  move_handling.py  move_handling_finish.py  move_handling_initialization.py  pyproject.toml  release_script.py  state_action_handling.py  state_actions_default.py  state_comment.py  state_handling.py  tag_plausibility.py  transition_handling.py  undo_handling.py  update_hdl_tab.py
docs/: DevelopmentOverview.md  canvas_frame_design.md  development_setup.md  release_script_README.md
examples/: cordic_square_root_control.hfe  division_unsigned_control.hfe  multiply_wt_booth_control.hfe  multiply_wt_booth_control.vhd
scripts/: check_codegen_boundary.py
src/: OptionMenu.py  canvas_delete.py  canvas_editing.py  canvas_modify_bindings.py  color_changer.py  compile_handling.py  condition_action.py  condition_action_handling.py  config.py  connector_handling.py  connector_insertion.py  constants.py  copy_files.py  custom_text.py  design_data.py  design_data_gatherer.py  file_handling.py  file_handling_v1.py  find_replace.py  generation_config_builder.py  global_actions.py  global_actions_clocked.py  global_actions_combinatorial.py  global_actions_handling.py  grid_drawing.py  hdl_fsm_editor.py  hdl_generation.py  hdl_generation_architecture.py  hdl_generation_architecture_state_actions.py  hdl_generation_architecture_state_sequence.py  hdl_generation_config.py  hdl_generation_library.py  hdl_generation_module.py  link_dictionary.py  linting.py  list_separation_check.py  main.py  main_window.py  menu_bar.py  move_handling.py  (+32 more)
src/codegen/: exceptions.py  hdl_generation.py  hdl_generation_architecture.py  hdl_generation_architecture_state_actions.py  hdl_generation_architecture_state_sequence.py  hdl_generation_config.py  hdl_generation_library.py  hdl_generation_module.py  hdl_text_utils.py  link_sink.py  list_separation_check.py
src/dialogs/: color_changer.py  help_selection.py  help_shortcuts.py  regex_dialog.py  text_dialog.py
src/elements/: condition_action.py  connector.py  global_actions_clocked.py  global_actions_combinatorial.py  reset_entry.py  state.py  state_action.py  state_actions_default.py  state_comment.py  transition.py
src/utils/: __init__.py  var_expansion.py
src/widgets/: OptionMenu.py  Tooltip.py  __init__.py  code_editor.py  option_menu.py
tests/: README.md  __init__.py  conftest.py  test_golden_file_generation.py  test_var_expansion.py
tests/test_input/: count10.hfe  fifo_control.hfe  fifo_test_error.hfe  multiply_control.hfe  multiply_wt_booth_control.hfe  regression1.hfe  regression2.hfe  square_root_control.hfe  uart_receive.hfe  uart_send.hfe
tests/test_output/: cordic_square_root_control_e.vhd  cordic_square_root_control_fsm.vhd  count10_e.vhd  count10_fsm.vhd  division_unsigned_control.v  fifo_control_e.vhd  fifo_control_fsm.vhd  multiply_control_e.vhd  multiply_control_fsm.vhd  multiply_wt_booth_control.vhd  regression1_e.vhd  regression1_fsm.vhd  regression2_e.vhd  regression2_fsm.vhd  square_root_control_e.vhd  square_root_control_fsm.vhd  uart_receive_e.vhd  uart_receive_fsm.vhd  uart_send_e.vhd  uart_send_fsm.vhd
