[project]
name = "hdl-fsm-editor"
version = "0.1.0"
description = "HDL-FSM-Editor for VHDL and Verilog"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.12.4",
]


[tool.ruff]

# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
